inception services added

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,13 @@
+# Wordpress env variables
+WP_URL=scakmak.42.fr
+WP_TITLE=wordpress
 
-# MariaDB env variables
-MYSQL_ROOT_PASSWORD=rootforce99
-MYSQL_USER=scakmak
-MYSQL_PASSWORD=force99
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_DATABASE=wordpress
+# ADMIN env
+WP_ADMIN_LOGIN=unzem
+WP_ADMIN_PASSWORD=bavenk
+WP_ADMIN_EMAIL=unzem@wordpress.com
+
+# USER env
+WP_USER_LOGIN=scakmak
+WP_USER_PASSWORD=bekinq
+WP_USER_EMAIL=scakmak@wordpress.com
