--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,12 +1,66 @@
 version: '3.5'
 
+networks:
+  nw:
+    name: webapp_network
+    driver: bridge
+
+volumes:
+  wp:
+    driver: local
+    name: wp_volume
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/scakmak/data/wp
+  db:
+    driver: local
+    name: db_volume
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/scakmak/data/wp
+
+
 services:
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb
-    env_file:
-      - ./.env
+    ports:
+      - "3306:3306"
     networks:
       - nw
-    restart: unless-stopped
-    
+    restart: always
+    volumes:
+      - db:/var/lib/mysql
+
+  wordpress:
+    container_name: wordpress
+    build: ./requirements/wordpress
+    env_file:
+      - ./.env
+    ports:
+      - "9000:9000"
+    networks:
+      - nw
+    depends_on:
+      - mariadb
+    restart: always
+    volumes:
+      - wp:/var/www/html
+
+  nginx:
+    container_name: nginx
+    build: ./requirements/nginx
+    env_file:
+      - ./.env
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - wordpress
+    volumes:
+      - wp:/var/www/html
+    networks:
+      - nw
+    restart: always
