--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -2,7 +2,7 @@ server {
 
 	listen 80;
 	listen [::]:80;
-	server_name fkaratay.42.fr;
+	server_name scakmak.42.fr;
 	return 301 https://$host$request_uri;
 
 }
